providing minimum code required to inject listener for adjusting all responses of Contao

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,4 +1,4 @@
 services:
-  Cepharum\Contao\CorsBundle\KernelResponseListener:
+  Cepharum\Contao\CorsBundle\EventListener\KernelResponseListener:
     tags:
       - { name: kernel.event_listener, event: kernel.response }
